--- a/dashboard.html
+++ b/dashboard.html
@@ -16,6 +16,7 @@
         <a href="inventory-operations.html">Operations</a>
         <a href="job-report.html">Job Report</a>
         <a href="item-master.html">Item Master</a>
+        <a href="job-creator.html">Job Creator</a>
         <a href="#">Settings</a>
       </nav>
       <button id="collapseBtn" class="collapse">Collapse</button>
