--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Admin Dashboard</title>
+  <meta name="theme-color" content="#0f172a" />
+  <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -83,7 +85,18 @@
   </div>
 
   <script src="js/utils.js"></script>
-  <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.requireRole?.('admin');utils.applyNavVisibility?.();}});</script>
+  <script>
+    document.addEventListener('DOMContentLoaded',()=>{
+      if(window.utils){
+        utils.wrapFetchWithRole?.();
+        utils.applyStoredTheme?.();
+        utils.requireRole?.('admin');
+        utils.buildMobileNav?.();
+        utils.applyNavVisibility?.();
+        utils.registerServiceWorker?.();
+      }
+    });
+  </script>
   <script src="js/dashboard.js"></script>
 </body>
 </html>
