--- a/dashboard.html
+++ b/dashboard.html
@@ -13,8 +13,8 @@
     <aside class="sidebar">
       <div class="brand">Inventory Management System</div>
       <nav>
-        <a class="active" href="dashboard.html" data-role="admin">Admin Dashboard</a>
-        <a href="employee-dashboard.html" data-role="employee">Employee Dashboard</a>
+        <a class="active always-visible" href="dashboard.html" data-role="admin">Admin Dashboard</a>
+        <a class="always-visible" href="employee-dashboard.html" data-role="employee">Employee Dashboard</a>
         <a href="inventory-list.html">Inventory</a>
         <a href="inventory-operations.html">Operations</a>
         <a href="job-report.html">Job Report</a>
