--- a/inventory-operations.html
+++ b/inventory-operations.html
@@ -45,11 +45,11 @@
     <aside class="sidebar">
       <div class="brand">Inventory Management System</div>
       <nav>
-        <a href="dashboard.html">Dashboard</a>
+        <a class="always-visible" href="dashboard.html">Dashboard</a>
         <a href="inventory-list.html">Inventory</a>
         <a class="active" href="inventory-operations.html">Operations</a>
-        <a href="dashboard.html" data-role="admin">Admin Dashboard</a>
-        <a href="employee-dashboard.html" data-role="employee">Employee Dashboard</a>
+        <a class="always-visible" href="dashboard.html" data-role="admin">Admin Dashboard</a>
+        <a class="always-visible" href="employee-dashboard.html" data-role="employee">Employee Dashboard</a>
         <a href="job-report.html">Job Report</a>
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Job Creator</a>
