--- a/inventory-operations.html
+++ b/inventory-operations.html
@@ -43,18 +43,29 @@
 <body>
   <div class="app">
     <aside class="sidebar">
-      <div class="brand">Inventory Management System</div>
+      <div>
+        <div class="brand">Inventory Management System</div>
+        <div class="subtitle">Operations center</div>
+        <div class="user-chip">
+          <div class="avatar">OP</div>
+          <div>
+            <div style="font-weight:700;">Active session</div>
+            <div style="font-size:12px;opacity:0.8;">Inventory actions</div>
+          </div>
+        </div>
+      </div>
       <nav>
         <a class="always-visible" href="dashboard.html">Dashboard</a>
-        <a href="inventory-list.html">Inventory</a>
         <a class="active" href="inventory-operations.html">Operations</a>
+        <a href="inventory-list.html">Inventory</a>
         <a class="always-visible" href="dashboard.html" data-role="admin">Admin Dashboard</a>
         <a class="always-visible" href="employee-dashboard.html" data-role="employee">Employee Dashboard</a>
         <a href="job-report.html">Job Report</a>
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Job Creator</a>
+        <a href="order-register.html" data-role="admin">Orders</a>
         <a href="settings.html" data-role="admin">Settings</a>
-        <a href="settings-employee.html" data-role="employee">Settings</a>
+        <a href="settings-employee.html" data-role="employee">Emp Settings</a>
         <a href="item-history.html" data-role="admin">History</a>
       </nav>
     </aside>
