Implement session validation and redirect to login if not authenticated; update dashboard and inventory scripts accordingly

--- a/dashboard.html
+++ b/dashboard.html
@@ -88,6 +88,7 @@
   <script>
     document.addEventListener('DOMContentLoaded',()=>{
       if(window.utils){
+        if(!utils.requireSession?.()) return;
         utils.wrapFetchWithRole?.();
         utils.applyStoredTheme?.();
         utils.requireRole?.('admin');
