--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -62,6 +62,7 @@
   <script>
     document.addEventListener('DOMContentLoaded',()=>{
       if(window.utils){
+        if(!utils.requireSession?.()) return;
         utils.wrapFetchWithRole?.();
         utils.applyStoredTheme?.();
         utils.requireRole?.('employee');
