--- a/dashboard.html
+++ b/dashboard.html
@@ -13,17 +13,17 @@
     <aside class="sidebar">
       <div>
         <div class="brand">Inventory Management System</div>
-        <div class="subtitle">Admin workspace</div>
+        <div class="subtitle">Navigation</div>
         <div class="user-chip">
-          <div class="avatar">AD</div>
+          <div class="avatar">US</div>
           <div>
-            <div style="font-weight:700;">Admin</div>
-            <div style="font-size:12px;opacity:0.8;">Full access</div>
+            <div style="font-weight:700;">User</div>
+            <div style="font-size:12px;opacity:0.8;">Quick access</div>
           </div>
         </div>
       </div>
       <nav>
-        <a class="active always-visible" href="dashboard.html" data-role="admin">Admin Dashboard</a>
+        <a class="always-visible active" href="dashboard.html" data-role="admin">Admin Dashboard</a>
         <a class="always-visible" href="employee-dashboard.html" data-role="employee">Employee Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
         <a href="inventory-list.html">Inventory</a>
