--- a/inventory-operations.html
+++ b/inventory-operations.html
@@ -45,17 +45,16 @@
     <aside class="sidebar">
       <div>
         <div class="brand">Inventory Management System</div>
-        <div class="subtitle">Operations center</div>
+        <div class="subtitle">Navigation</div>
         <div class="user-chip">
-          <div class="avatar">OP</div>
+          <div class="avatar">US</div>
           <div>
-            <div style="font-weight:700;">Active session</div>
-            <div style="font-size:12px;opacity:0.8;">Inventory actions</div>
+            <div style="font-weight:700;">User</div>
+            <div style="font-size:12px;opacity:0.8;">Quick access</div>
           </div>
         </div>
       </div>
       <nav>
-        <a class="always-visible" href="dashboard.html">Dashboard</a>
         <a class="always-visible" href="dashboard.html" data-role="admin">Admin Dashboard</a>
         <a class="always-visible" href="employee-dashboard.html" data-role="employee">Employee Dashboard</a>
         <a class="active" href="inventory-operations.html">Operations</a>
