--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Employee Dashboard</title>
+  <title>Dashboard</title>
   <meta name="theme-color" content="#0f172a" />
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="css/style.css" />
@@ -44,7 +44,7 @@
     </aside>
     <main class="main">
       <header class="topbar">
-        <h1>Employee Dashboard</h1>
+        <h1>Dashboard</h1>
         <div class="topbar-right"><button id="logoutBtn" class="muted">Logout</button></div>
       </header>
 
