--- a/settings-employee.html
+++ b/settings-employee.html
@@ -22,7 +22,7 @@
       </div>
       <nav>
         <a class="always-visible" href="dashboard.html" data-role="admin">Admin Dashboard</a>
-        <a class="always-visible" href="employee-dashboard.html" data-role="employee">Employee Dashboard</a>
+        <a class="always-visible" href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
         <a href="inventory-list.html">Inventory</a>
         <a href="job-report.html">Job Report</a>
