Remove 'always-visible' class from navigation links in multiple HTML files

--- a/job-report.html
+++ b/job-report.html
@@ -21,8 +21,8 @@
         </div>
       </div>
       <nav>
-        <a class="always-visible" href="dashboard.html" data-role="admin">Admin Dashboard</a>
-        <a class="always-visible" href="employee-dashboard.html" data-role="employee">Dashboard</a>
+        <a  href="dashboard.html" data-role="admin">Admin Dashboard</a>
+        <a  href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
         <a href="inventory-list.html">Inventory</a>
         <a class="active" href="job-report.html">Job Report</a>
