--- a/dashboard.html
+++ b/dashboard.html
@@ -23,8 +23,8 @@
         </div>
       </div>
       <nav>
-        <a class="always-visible active" href="dashboard.html" data-role="admin">Admin Dashboard</a>
-        <a class="always-visible" href="employee-dashboard.html" data-role="employee">Dashboard</a>
+        <a class="active" href="dashboard.html" data-role="admin">Admin Dashboard</a>
+        <a  href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
         <a href="inventory-list.html">Inventory</a>
         <a href="job-report.html">Job Report</a>
