--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -29,8 +29,8 @@
         </div>
       </div>
       <nav>
-        <a class="always-visible" href="dashboard.html" data-role="admin">Admin Dashboard</a>
-        <a class="always-visible active" href="employee-dashboard.html" data-role="employee">Dashboard</a>
+        <a  href="dashboard.html" data-role="admin">Admin Dashboard</a>
+        <a class="active" href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
         <a href="inventory-list.html">Inventory</a>
         <a href="job-report.html">Job Report</a>
