--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -48,12 +48,17 @@
         <div class="topbar-right"><button id="logoutBtn" class="muted">Logout</button></div>
       </header>
 
-      <section class="card">
-        <h3>Go to your tasks</h3>
-        <div class="quick-actions">
-          <a href="inventory-operations.html?mode=checkout" class="secondary">Pick / Return Items</a>
-          <a href="inventory-list.html">Check Stock</a>
-          <a href="job-report.html" class="warn">Job Activity</a>
+      <section class="card" style="background:linear-gradient(135deg,#0a1b2b,#0f7a57);color:#fff;box-shadow:0 14px 36px rgba(10,27,43,0.25);">
+        <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:10px;">
+          <div>
+            <h3 style="color:rgba(255,255,255,0.85);margin-bottom:6px;">Go to your tasks</h3>
+            <div style="font-size:0.95rem;opacity:0.85;">Jump straight into your daily workflows.</div>
+          </div>
+          <div style="display:flex;gap:8px;">
+            <a href="inventory-operations.html?mode=checkout" class="secondary" style="background:#fff;color:#0a1b2b;padding:10px 14px;border-radius:10px;font-weight:700;text-decoration:none;box-shadow:0 10px 22px rgba(255,255,255,0.2);">Pick / Return</a>
+            <a href="inventory-list.html" style="background:rgba(255,255,255,0.12);color:#fff;padding:10px 14px;border-radius:10px;font-weight:700;text-decoration:none;border:1px solid rgba(255,255,255,0.25);">Check Stock</a>
+            <a href="job-report.html" style="background:rgba(255,255,255,0.12);color:#fff;padding:10px 14px;border-radius:10px;font-weight:700;text-decoration:none;border:1px solid rgba(255,255,255,0.25);">Job Activity</a>
+          </div>
         </div>
       </section>
 
