--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,8 @@
         <div class="user-chip">
           <div class="avatar">US</div>
           <div>
-            <div style="font-weight:700;">User</div>
+            <div style="font-weight:700;"><div class="user-name">User</div>
+            <div class="user-role">Quick access</div>
             <div style="font-size:12px;opacity:0.8;">Quick access</div>
           </div>
         </div>
@@ -110,3 +111,4 @@
   <script src="js/dashboard.js"></script>
 </body>
 </html>
+
