--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -25,7 +25,8 @@
         <div class="user-chip">
           <div class="avatar">US</div>
           <div>
-            <div style="font-weight:700;">User</div>
+            <div style="font-weight:700;"><div class="user-name">User</div>
+            <div class="user-role">Quick access</div>
             <div style="font-size:12px;opacity:0.8;">Quick access</div>
           </div>
         </div>
@@ -180,3 +181,4 @@
   </script>
 </body>
 </html>
+
