--- a/inventory-operations.html
+++ b/inventory-operations.html
@@ -49,7 +49,8 @@
         <div class="user-chip">
           <div class="avatar">US</div>
           <div>
-            <div style="font-weight:700;">User</div>
+            <div style="font-weight:700;"><div class="user-name">User</div>
+            <div class="user-role">Quick access</div>
             <div style="font-size:12px;opacity:0.8;">Quick access</div>
           </div>
         </div>
@@ -285,3 +286,4 @@
   <script src="js/operations.js"></script>
 </body>
 </html>
+
