--- a/settings-employee.html
+++ b/settings-employee.html
@@ -42,74 +42,88 @@
       </header>
 
       <section class="card inventory-card">
-        <h3>Appearance</h3>
-        <div class="form-row">
-          <label>Theme
-            <select id="themeSelect">
-              <option value="light">Light</option>
-              <option value="dark">Dark</option>
-            </select>
-          </label>
-          <label>Compact Spacing
-            <select id="densitySelect">
-              <option value="normal">Normal</option>
-              <option value="compact">Compact</option>
-            </select>
-          </label>
-          <label>Font Size
-            <select id="fontSizeSelect">
-              <option value="normal">Normal</option>
-              <option value="large">Large</option>
-              <option value="xlarge">Extra Large</option>
-            </select>
-          </label>
+        <div class="form-row" style="margin-bottom:12px;gap:8px;">
+          <button class="muted" id="tabAppearance" type="button" style="flex:1;">Appearance</button>
+          <button class="muted" id="tabProfile" type="button" style="flex:1;">Profile</button>
+          <button class="muted" id="tabShortcuts" type="button" style="flex:1;">Shortcuts</button>
+          <button class="muted" id="tabLocale" type="button" style="flex:1;">Locale</button>
         </div>
-        <div id="empSettingsMsg" style="font-size:0.9rem;color:#6b7280;"></div>
-      </section>
 
-      <section class="card inventory-card">
-        <h3>Shortcuts</h3>
-        <div class="form-row">
-          <label style="flex:1">Choose quick actions to show
-            <div style="display:flex;flex-wrap:wrap;gap:8px;margin-top:6px;">
-              <label style="display:flex;align-items:center;gap:6px;"><input type="checkbox" class="shortcut-toggle" value="pick-return"> Pick / Return</label>
-              <label style="display:flex;align-items:center;gap:6px;"><input type="checkbox" class="shortcut-toggle" value="check-stock"> Check Stock</label>
-              <label style="display:flex;align-items:center;gap:6px;"><input type="checkbox" class="shortcut-toggle" value="job-activity"> Job Activity</label>
-            </div>
-          </label>
+        <div id="panelAppearance" class="settings-panel">
+          <h3>Appearance</h3>
+          <div class="form-row">
+            <label>Theme
+              <select id="themeSelect">
+                <option value="light">Light</option>
+                <option value="dark">Dark</option>
+              </select>
+            </label>
+            <label>Compact Spacing
+              <select id="densitySelect">
+                <option value="normal">Normal</option>
+                <option value="compact">Compact</option>
+              </select>
+            </label>
+            <label>Font Size
+              <select id="fontSizeSelect">
+                <option value="normal">Normal</option>
+                <option value="large">Large</option>
+                <option value="xlarge">Extra Large</option>
+              </select>
+            </label>
+          </div>
         </div>
-      </section>
 
-      <section class="card inventory-card">
-        <h3>Profile</h3>
-        <div class="form-row">
-          <label>Name
-            <input id="profileName" type="text" placeholder="Your display name">
-          </label>
-          <label>Avatar Initials
-            <input id="profileAvatar" type="text" maxlength="2" placeholder="e.g. JD">
-          </label>
+        <div id="panelProfile" class="settings-panel" style="display:none;">
+          <h3>Profile</h3>
+          <div class="form-row">
+            <label>Name
+              <input id="profileName" type="text" placeholder="Your display name">
+            </label>
+            <label>Avatar Initials
+              <input id="profileAvatar" type="text" maxlength="2" placeholder="e.g. JD">
+            </label>
+            <label>Profile Picture
+              <input id="profilePicture" type="file" accept="image/*">
+            </label>
+          </div>
+          <div style="font-size:0.9rem;color:#6b7280;">Only the most recent picture is kept.</div>
+          <div id="loginActivity" style="font-size:0.9rem;color:#6b7280;margin-top:8px;">Recent logins will appear here.</div>
         </div>
-        <div id="loginActivity" style="font-size:0.9rem;color:#6b7280;">Recent logins will appear here.</div>
-      </section>
 
-      <section class="card inventory-card">
-        <h3>Locale</h3>
-        <div class="form-row">
-          <label>Language/Region
-            <select id="languageSelect">
-              <option value="en-US">English (US)</option>
-              <option value="en-GB">English (UK)</option>
-              <option value="es-ES">Español</option>
-            </select>
-          </label>
-          <label>Time Format
-            <select id="timeFormatSelect">
-              <option value="12h">12-hour</option>
-              <option value="24h">24-hour</option>
-            </select>
-          </label>
+        <div id="panelShortcuts" class="settings-panel" style="display:none;">
+          <h3>Shortcuts</h3>
+          <div class="form-row">
+            <label style="flex:1">Choose quick actions to show
+              <div style="display:flex;flex-wrap:wrap;gap:8px;margin-top:6px;">
+                <label style="display:flex;align-items:center;gap:6px;"><input type="checkbox" class="shortcut-toggle" value="pick-return"> Pick / Return</label>
+                <label style="display:flex;align-items:center;gap:6px;"><input type="checkbox" class="shortcut-toggle" value="check-stock"> Check Stock</label>
+                <label style="display:flex;align-items:center;gap:6px;"><input type="checkbox" class="shortcut-toggle" value="job-activity"> Job Activity</label>
+              </div>
+            </label>
+          </div>
         </div>
+
+        <div id="panelLocale" class="settings-panel" style="display:none;">
+          <h3>Locale</h3>
+          <div class="form-row">
+            <label>Language/Region
+              <select id="languageSelect">
+                <option value="en-US">English (US)</option>
+                <option value="en-GB">English (UK)</option>
+                <option value="es-ES">Español</option>
+              </select>
+            </label>
+            <label>Time Format
+              <select id="timeFormatSelect">
+                <option value="12h">12-hour</option>
+                <option value="24h">24-hour</option>
+              </select>
+            </label>
+          </div>
+        </div>
+
+        <div id="empSettingsMsg" style="font-size:0.9rem;color:#6b7280;margin-top:8px;"></div>
       </section>
     </main>
   </div>
