Enhance settings page with tab button styles and improved language/time label

--- a/settings-employee.html
+++ b/settings-employee.html
@@ -43,10 +43,10 @@
 
       <section class="card inventory-card">
         <div class="form-row" style="margin-bottom:12px;gap:8px;">
-          <button class="muted" id="tabAppearance" type="button" style="flex:1;">Appearance</button>
-          <button class="muted" id="tabProfile" type="button" style="flex:1;">Profile</button>
-          <button class="muted" id="tabShortcuts" type="button" style="flex:1;">Shortcuts</button>
-          <button class="muted" id="tabLocale" type="button" style="flex:1;">Locale</button>
+          <button class="muted tab-btn" id="tabAppearance" type="button" style="flex:1;">Appearance</button>
+          <button class="muted tab-btn" id="tabProfile" type="button" style="flex:1;">Profile</button>
+          <button class="muted tab-btn" id="tabShortcuts" type="button" style="flex:1;">Shortcuts</button>
+          <button class="muted tab-btn" id="tabLocale" type="button" style="flex:1;">Language &amp; Time</button>
         </div>
 
         <div id="panelAppearance" class="settings-panel">
@@ -105,7 +105,7 @@
         </div>
 
         <div id="panelLocale" class="settings-panel" style="display:none;">
-          <h3>Locale</h3>
+          <h3>Language &amp; Time</h3>
           <div class="form-row">
             <label>Language/Region
               <select id="languageSelect">
