Refactor user role display and navigation link text for consistency across dashboard and settings pages

--- a/order-register.html
+++ b/order-register.html
@@ -16,7 +16,7 @@
           <div class="avatar">US</div>
           <div>
             <div style="font-weight:700;">User</div>
-            <div style="font-size:12px;opacity:0.8;">Quick access</div>
+            <div style="font-size:12px;opacity:0.8;"></div>
           </div>
         </div>
       </div>
@@ -30,7 +30,7 @@
         <a href="job-creator.html" data-role="admin">Job Creator</a>
         <a class="active" href="order-register.html" data-role="admin">Orders</a>
         <a href="settings.html" data-role="admin">Settings</a>
-        <a href="settings-employee.html" data-role="employee">Emp Settings</a>
+        <a href="settings-employee.html" data-role="employee">Settings</a>
         <a href="item-history.html" data-role="admin">History</a>
       </nav>
     </aside>
