--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -26,8 +26,8 @@
           <div class="avatar">US</div>
           <div>
             <div style="font-weight:700;"><div class="user-name">User</div>
-            <div class="user-role">Quick access</div>
-            <div style="font-size:12px;opacity:0.8;">Quick access</div>
+            <div class="user-role"></div>
+            <div style="font-size:12px;opacity:0.8;"></div>
           </div>
         </div>
       </div>
@@ -41,7 +41,7 @@
         <a href="job-creator.html" data-role="admin">Job Creator</a>
         <a href="order-register.html" data-role="admin">Orders</a>
         <a href="settings.html" data-role="admin">Settings</a>
-        <a href="settings-employee.html" data-role="employee">Emp Settings</a>
+        <a href="settings-employee.html" data-role="employee">Settings</a>
         <a href="item-history.html" data-role="admin">History</a>
       </nav>
     </aside>
