--- a/settings-employee.html
+++ b/settings-employee.html
@@ -16,7 +16,7 @@
           <div class="avatar">US</div>
           <div>
             <div style="font-weight:700;">User</div>
-            <div style="font-size:12px;opacity:0.8;">Quick access</div>
+            <div style="font-size:12px;opacity:0.8;"></div>
           </div>
         </div>
       </div>
