--- a/register.html
+++ b/register.html
@@ -10,13 +10,21 @@
     .auth-card{background:var(--card);padding:24px;border-radius:10px;box-shadow:0 4px 20px rgba(15,23,42,0.08);width:100%;max-width:380px;}
     .auth-card h1{margin-top:0;margin-bottom:12px;}
     .auth-card .inventory-form{gap:12px;}
+    .tab-toggle{display:flex;gap:8px;margin-bottom:12px;}
+    .tab-toggle button{flex:1;padding:10px;border:1px solid #e5e7eb;background:#f8fafc;border-radius:8px;font-weight:700;cursor:pointer;}
+    .tab-toggle button.active{background:linear-gradient(135deg,#0a1b2b,#0f7a57);color:#fff;border-color:rgba(0,0,0,0.05);box-shadow:0 8px 20px rgba(15,122,87,0.25);}
+    .admin-note{font-size:0.9rem;color:#b91c1c;background:#fff5f5;padding:8px;border-radius:8px;border:1px solid #fecdd3;}
   </style>
 </head>
 <body>
   <div class="auth-wrapper">
     <div class="auth-card">
       <h1>Create Account</h1>
-      <p style="color:#6b7280;margin-top:0;margin-bottom:16px;">Register to start using the app.</p>
+      <div class="tab-toggle">
+        <button type="button" class="active" data-mode="user">Employee</button>
+        <button type="button" data-mode="admin">Admin</button>
+      </div>
+      <p id="reg-subtitle" style="color:#6b7280;margin-top:0;margin-bottom:16px;">Register to start using the app.</p>
       <form id="registerForm" class="inventory-form">
         <div class="form-row">
           <label>Name<input id="reg-name" required></label>
@@ -27,11 +35,15 @@
         <div class="form-row">
           <label>Password<input id="reg-password" type="password" required></label>
         </div>
+        <div class="form-row" id="admin-key-row" style="display:none;">
+          <label>Admin Key<input id="reg-adminkey" type="password" placeholder="Admin signup key"></label>
+        </div>
         <div class="form-row">
           <button type="submit">Register</button>
         </div>
         <div style="font-size:0.9rem;color:#6b7280;">Already have an account? <a href="login.html">Login</a></div>
         <div id="reg-error" style="color:#b91c1c;font-size:0.9rem;margin-top:8px;"></div>
+        <div id="admin-note" class="admin-note" style="display:none;">Admin signup requires the admin key configured on the server (ADMIN_SIGNUP_SECRET).</div>
       </form>
     </div>
   </div>
