--- a/login.html
+++ b/login.html
@@ -19,6 +19,9 @@
       <p style="color:#6b7280;margin-top:0;margin-bottom:16px;">Sign in to continue.</p>
       <form id="loginForm" class="inventory-form">
         <div class="form-row">
+          <label>Business Code<input id="login-tenant" placeholder="e.g. acme" required></label>
+        </div>
+        <div class="form-row">
           <label>Email<input id="login-email" type="email" required></label>
         </div>
         <div class="form-row">
@@ -27,7 +30,7 @@
         <div class="form-row">
           <button type="submit">Login</button>
         </div>
-        <div style="font-size:0.9rem;color:#6b7280;">No account? <a href="register.html">Register</a></div>
+        <div style="font-size:0.9rem;color:#6b7280;">No account? <a href="register.html">Register</a> or <a href="tenant-create.html">Create a business</a></div>
         <div id="login-error" style="color:#b91c1c;font-size:0.9rem;margin-top:8px;"></div>
       </form>
     </div>
