Add job assignment feature to inventory order form and API

--- a/order-register.html
+++ b/order-register.html
@@ -53,6 +53,13 @@
             <label>Expected Arrival<input id="orderEta" type="date"></label>
           </div>
           <div class="form-row">
+            <label>Assign to Job (optional)
+              <select id="orderJob">
+                <option value="">General Inventory</option>
+              </select>
+            </label>
+          </div>
+          <div class="form-row">
             <label style="flex:1">Notes<textarea id="orderNotes" rows="2"></textarea></label>
           </div>
           <div class="form-row">
