--- a/login.html
+++ b/login.html
@@ -6,10 +6,15 @@
   <title>Login</title>
   <link rel="stylesheet" href="css/style.css" />
   <style>
-    .auth-wrapper{display:flex;align-items:center;justify-content:center;min-height:100vh;background:var(--bg);}
-    .auth-card{background:var(--card);padding:24px;border-radius:10px;box-shadow:0 4px 20px rgba(15,23,42,0.08);width:100%;max-width:360px;}
-    .auth-card h1{margin-top:0;margin-bottom:12px;}
-    .auth-card .inventory-form{gap:12px;}
+    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;background:linear-gradient(135deg,#0a1b2b 0%,#0f7a57 100%);color:#e5e7eb;}
+    .auth-wrapper{display:flex;align-items:center;justify-content:center;min-height:100vh;padding:20px;}
+    .auth-card{background:#0c1624;color:#e5e7eb;padding:28px;border-radius:16px;box-shadow:0 20px 60px rgba(0,0,0,0.35);width:100%;max-width:420px;border:1px solid rgba(255,255,255,0.08);}
+    .auth-card h1{margin-top:0;margin-bottom:10px;font-weight:800;letter-spacing:0.3px;}
+    .auth-card .inventory-form{gap:14px;}
+    .auth-card a{color:#8be0c4;font-weight:700;text-decoration:none;}
+    label{color:#cbd5f5;}
+    input{background:#0f172a;color:#e5e7eb;border:1px solid #1f2937;}
+    button{background:linear-gradient(135deg,#0f7a57,#14a26d);border:none;color:#fff;font-weight:800;box-shadow:0 10px 30px rgba(20,162,109,0.35);}
   </style>
 </head>
 <body>
