Refactor clock display in dashboards to use a new styled pill format

--- a/dashboard.html
+++ b/dashboard.html
@@ -41,7 +41,7 @@
       <header class="topbar">
         <h1>Admin Dashboard</h1>
         <div class="topbar-right">
-          <div id="clock" class="clock"></div>
+          <div class="clock-pill"><span class="clock-label">Now</span><span id="clock" class="clock-value"></span></div>
           <button id="logoutBtn" class="muted">Logout</button>
         </div>
       </header>
