--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -49,7 +49,7 @@
       <header class="topbar">
         <h1>Dashboard</h1>
         <div class="topbar-right">
-          <div id="clock-emp" class="clock"></div>
+          <div class="clock-pill"><span class="clock-label">Now</span><span id="clock-emp" class="clock-value"></span></div>
           <button id="logoutBtn" class="muted">Logout</button>
         </div>
       </header>
